[package]
name = "dxf"
version = "0.4.0"
authors = ["Brett V. Forsgren <brett.forsgren@outlook.com>"]
build = "build/build.rs"
description = "A rust crate for reading and writing DXF and DXB CAD files."
documentation = "https://docs.rs/dxf/"
repository = "https://github.com/ixmilia/dxf-rs"
readme = "README.md"
keywords = ["AutoCAD", "CAD", "DXB", "DXF"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
targets = []

[features]
serialize = ["serde", "serde_derive"]

[dependencies]
byteorder = "1.3.2"
chrono = { version= "0.4.9", features = ["serde"] }
encoding_rs = "0.8.20"
enum_primitive = "0.1.1"
image = "0.22.3"
itertools = "0.8.1"
num = "0.2.0"
serde = { version = "1.*.*", optional = true }
serde_derive = { version = "1.*.*", optional = true }
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[build-dependencies]
xmltree = "0.8.0"

[dev-dependencies]
float-cmp = "0.6.0"
glob = "0.3.0"
