[package]
name = "dxf"
version = "0.6.0"
authors = ["Brett V. Forsgren <brett.forsgren@outlook.com>"]
build = "build/build.rs"
description = "A rust crate for reading and writing DXF and DXB CAD files."
documentation = "https://docs.rs/dxf/"
repository = "https://github.com/ixmilia/dxf-rs"
readme = "README.md"
keywords = ["AutoCAD", "CAD", "DXB", "DXF"]
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
targets = []

[features]
serialize = ["serde"]

[dependencies]
byteorder = "1.3.4"
chrono = { version= "0.4.19", features = ["serde"] }
encoding_rs = "0.8.26"
enum_primitive = "0.1.1"
image = { version = "0.25.1", default-features = false, features = ["bmp"] }
itertools = "0.13.0"
num = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "1.3.3", features = ["serde", "v4"] }

[build-dependencies]
xmltree = "0.8.0"

[dev-dependencies]
float-cmp = "0.9.0"
glob = "0.3.0"
